# caracal

./: .cproject  .gitignore  .project  CMakeLists.txt  Makefile  boot.sh  bootboot.config  build.sh  caracal.json  clean.sh  debug.sh  mkimage.sh  run.sh
.fleet/: run.json  settings.json
boot/: Makefile
bootstrap/: Makefile  pc-x86_64.json
bootstrap/.cargo/: config.toml
bootstrap/pc/: Makefile  link.ld
bootstrap/pc/x86_64/: Makefile  link.ld
bootstrap/pc/x86_64/include/: bmain.h  caracal.h  elf64.h  tar.h
bootstrap/pc/x86_64/src/: bmain.cpp  elf64.cpp  tar.cpp
bootstrap/src/: main.rs
cboot/: Cargo.toml  Makefile
cboot/.cargo/: config.toml
cboot/include/: bmain.h
cboot/src/: bmain.cpp  main.rs  panic.rs  utility.rs
cboot/src/arch/x86_64/: allocatorSetup.cpp  crtn.s  launchKernel.cpp  launchkernel.cpp  setupArchitectureStructures.cpp
cboot/src/boot/: bootboot.rs
cboot/src/runtime/: delete.cpp  new.cpp
cboot/targets/: cboot-x86_64.json  x86_64-elf-Makefile
cboot/triplets/: x86_64-elf-link.ld  x86_64-elf-target.json
config/: caracal.json  x86_64-elf-bootboot.config  x86_64-elf-bootboot.json
filesystem/: kernel
filesystem/sys/: core  initrd  kernel
iso/EFI/BOOT/: BOOTX64.EFI
kernel/: .bashrc  Makefile  kernel.doxyfile
kernel/include/: bootboot.h  caracal.h  kernel.h  pcscreenfont.h  string.h
kernel/include/arch/: cpu.h  glue.h  machine.h
kernel/include/arch/cpu/: cpu.h
kernel/include/arch/machine/: machine.h
kernel/include/arch/pc/: pc.h
kernel/include/arch/x86_64/: exceptions.h  idt.h  paging.h  registers.h  x86_64.h
kernel/include/debug/: consoleoutput.h  debug.h  debugconsole.h  lfbconsoleoutput.h
kernel/include/memory/: memoryallocator.h  memoryarray.h  memorymap.h  pageframeallocator.h  spinlock.h  virtualmemorymanager.h
kernel/include/object/: kernelobject.h  objectmanager.h
kernel/include/process/: process.h  processmanager.h  spinlock.h  taskmanager.h  thread.h  userfunctions.h
kernel/include/runtime/: cxx.h
kernel/include/service/: syscall.h
kernel/include/support/: staticbitmap.h  string.h
kernel/include/support/templates/: container.h  (+6 more)
kernel/src/: String.cpp  idleloop.cpp  kmain.cpp
kernel/src/debug/: consoleoutput.cpp  debugconsole.cpp
kernel/src/memory/: memoryallocator.cpp  memoryarray.cpp  memorymap.cpp  pageframeallocator.cpp  spinlock.cpp  virtualmemorymanager.cpp
kernel/src/object/: kernelobject.cpp  objectmanager.cpp
kernel/src/process/: process.cpp  processmanager.cpp  taskmanager.cpp  thread.cpp  userfunctions.cpp
kernel/src/runtime/: __dso_handle.cpp  callConstructors.cpp  callDestructors.cpp  delete.cpp  new.cpp
kernel/src/support/: String.cpp  staticbitmap.cpp
kernel/targets/: x86_64-elf-Makefile  x86_64-elf-link.ld
libkernel/: Makefile
libkernel/include/: bootboot.h  caracal.h  cboot.h  cpuUtilities.h  cpuutilities.h  cxx.h  debug.h  elf64.h  pcscreenfont.h  stackreset.h  tar.h
libkernel/include/arch/: cpuutilities.h
libkernel/include/debug/: consolecolour.h  consoleoutput.h  debug.h  debugconsole.h  lfbconsoleoutput.h
libkernel/include/format/: elf64.h  pcscreenfont.h  tar.h
libkernel/include/memory/: heapmanager.h  memoryallocator.h  memoryarray.h  pageframeallocator.h  spinlock.h
libkernel/include/runtime/: cxx.h
libkernel/include/structures/: bitmap.h  linkedlist.h  staticbitmap.h  string.h
libkernel/src/: spinlock.cpp
libkernel/src/debug/: consoleoutput.cpp  debugconsole.cpp  lfbconsoleoutput.cpp
libkernel/src/formats/: elf64.cpp  tar.cpp
libkernel/src/memory/: heapmanager.cpp  memoryallocator.cpp  memoryarray.cpp  pageframeallocator.cpp
libkernel/src/runtime/: __aeabi_atexit.cpp  __cxa_atexit.cpp  __cxa_finalize.cpp  __cxa_pure_virtual.cpp  __dso_handle.cpp  itoa.cpp  memcpy.cpp  memset.cpp  oct2bin.cpp  strcmp.cpp  strcpy.cpp  strlen.cpp  strncmp.cpp
libkernel/src/structures/: staticbitmap.cpp  string.cpp
libkernel/targets/: x86_64-elf-Makefile  x86_64-elf-link.ld
tools/: debug.sh  gdbcommands.txt  run.sh  test.sh
tools/bootboot/: mkbootimg
tools/ref/: large_cross_compiler.txt
(+108 files in other folders)
