cmake_minimum_required(VERSION 3.22)
project(caracal)

set(CMAKE_CXX_STANDARD 14)

include_directories(kernel/include)
include_directories(kernel/include/arch)
include_directories(kernel/include/arch/cpu)
include_directories(kernel/include/arch/cpu/x86_64)
include_directories(kernel/include/arch/cpu/x86_64/interrupt)
include_directories(kernel/include/arch/cpu/x86_64/memory)
include_directories(kernel/include/arch/cpu/x86_64/tables)
include_directories(kernel/include/arch/machine)
include_directories(kernel/include/arch/machine/pc)
include_directories(kernel/include/debug)
include_directories(kernel/include/memory)
include_directories(kernel/include/process)
include_directories(kernel/include/runtime)
include_directories(kernel/include/support)
include_directories(kernel/include/support/templates)
include_directories(tools)
include_directories(tools/bootboot)

add_executable(caracal
        kernel/include/arch/cpu/x86_64/interrupt/exceptions.h
        kernel/include/arch/cpu/x86_64/memory/heapmanager.h
        kernel/include/arch/cpu/x86_64/memory/memorylayout.h
        kernel/include/arch/cpu/x86_64/tables/gdt.h
        kernel/include/arch/cpu/x86_64/tables/idt.h
        kernel/include/arch/cpu/x86_64/archdef.h
        kernel/include/arch/cpu/x86_64/registers.h
        kernel/include/arch/cpu/x86_64/x86_64.h
        kernel/include/arch/cpu/cpu.h
        kernel/include/arch/machine/pc/noinclude.h
        kernel/include/arch/machine/pc/pc.h
        kernel/include/arch/machine/machine.h
        kernel/include/debug/consolecolour.h
        kernel/include/debug/consoleoutput.h
        kernel/include/debug/debug.h
        kernel/include/debug/debugconsole.h
        kernel/include/debug/lfbconsoleoutput.h
        kernel/include/memory/memoryallocator.h
        kernel/include/memory/memoryarray.h
        kernel/include/memory/pageframeallocator.h
        kernel/include/memory/virtualmemorymanager.h
        kernel/include/process/process.h
        kernel/include/process/processmanager.h
        kernel/include/process/thread.h
        kernel/include/runtime/cxx.h
        kernel/include/support/templates/container.h
        kernel/include/support/templates/doublelinkedlist.h
        kernel/include/support/templates/iterator.h
        kernel/include/support/templates/ordereddoublelinkedlist.h
        kernel/include/support/templates/staticarray.h
        kernel/include/support/staticbitmap.h
        kernel/include/support/string.h
        kernel/include/bootboot.h
        kernel/include/pcscreenfont.h
        kernel/src/arch/cpu/x86_64/interrupt/exceptions/08dfe.cpp
        kernel/src/arch/cpu/x86_64/interrupt/exceptions/0Epfe.cpp
        kernel/src/arch/cpu/x86_64/interrupt/exceptions.cpp
        kernel/src/arch/cpu/x86_64/memory/heapmanager.cpp
        kernel/src/arch/cpu/x86_64/tables/gdt.cpp
        kernel/src/arch/cpu/x86_64/tables/idt.cpp
        kernel/src/arch/cpu/x86_64/printregisters.cpp
        kernel/src/arch/cpu/x86_64/x86_64.cpp
        kernel/src/arch/machine/pc/debug/lfbconsoleoutput.cpp
        kernel/src/arch/machine/pc/pc.cpp
        kernel/src/debug/consoleoutput.cpp
        kernel/src/debug/debugconsole.cpp
        kernel/src/memory/memoryallocator.cpp
        kernel/src/memory/memoryarray.cpp
        kernel/src/memory/pageframeallocator.cpp
        kernel/src/memory/virtualmemorymanager.cpp
        kernel/src/process/process.cpp
        kernel/src/process/processmanager.cpp
        kernel/src/process/thread.cpp
        kernel/src/runtime/memory/memset.cpp
        kernel/src/runtime/__aeabi_atexit.cpp
        kernel/src/runtime/__cxa_atexit.cpp
        kernel/src/runtime/__cxa_finalize.cpp
        kernel/src/runtime/__cxa_pure_virtual.cpp
        kernel/src/runtime/__dso_handle.cpp
        kernel/src/runtime/delete.cpp
        kernel/src/runtime/new.cpp
        kernel/src/support/staticbitmap.cpp
        kernel/src/support/String.cpp
        kernel/src/kmain.cpp
        tools/bootboot/bootboot.h)
